Maluquices com manipulação de string. Não vou deixar isso nem a pau, apenas testando regex nos templates etc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "deno.enable": true,
     "deno.unstable": true,
-    "deno.lint": true
+    "deno.lint": true,
+    "deno.path": "C:\\Users\\45003836899\\.deno\\bin\\deno"
 }
